[gd_scene load_steps=4 format=3 uid="uid://b1ygjrriksm5v"]

[ext_resource type="Script" path="res://NodeChat/message_debug_driver/script/debug_window.gd" id="1_pe2xn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elc7i"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14fsw"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5

[node name="DebugWindow" type="Window"]
title = "调试"
initial_position = 2
size = Vector2i(1152, 648)
script = ExtResource("1_pe2xn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HSplitContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="graph_add_pos" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer2/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_elc7i")

[node name="GraphEdit" type="GraphEdit" parent="Control/VBoxContainer/HBoxContainer2/VSplitContainer/graph_add_pos"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Control/VBoxContainer/HBoxContainer2/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="Control/VBoxContainer/HBoxContainer2/VSplitContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tree" type="Tree" parent="Control/VBoxContainer/HBoxContainer2/VSplitContainer/Panel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
hide_root = true

[node name="add_new_side_win" type="PopupPanel" parent="."]
title = "设置下载路径"
initial_position = 3
size = Vector2i(1000, 100)
current_screen = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_14fsw")

[node name="HBoxContainer" type="HBoxContainer" parent="add_new_side_win"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 990.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="add_id" type="LineEdit" parent="add_new_side_win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
placeholder_text = "请输入添加的用户ID"

[node name="triger_type_option_btn" type="OptionButton" parent="add_new_side_win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="accept" type="Button" parent="add_new_side_win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "添加"

[node name="refuse" type="Button" parent="add_new_side_win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer2/VSplitContainer/Panel/HSplitContainer/Tree" to="." method="_on_tree_item_selected"]
[connection signal="pressed" from="add_new_side_win/HBoxContainer/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="add_new_side_win/HBoxContainer/refuse" to="." method="_on_refuse_pressed"]
